<resources>
    <string name="app_name">Fuel Hunter</string>
    <string name="fuel_hunter">Fuel Hunter</string>
    <string name="title_savings">Ietaupījums</string>
    <string name="title_precision">Degvielas cenu precizitāte</string>
    <string name="title_settings">Iestatījumi</string>
    <string name="title_language">Aplikācija valoda</string>
    <string name="title_companies">Uzpildes kompānijas</string>
    <string name="title_fuel_type">Degvielas veids</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="savings_bag_description">Parasts autobraucējs, uzpildās degvielas uzpildes stacijā, kas viņam ir pa
        ceļam starp mājām un darbu, un brīdī kad bāka ir gandrīz tukša.
    </string>
    <string name="savings_map_description">Lietojot šo aplikāciju, autobraucējs uzzinās par kādu, iespējams, netālu
        uzpildes staciju, kur cena ir lētāka par 1-5 centiem, nekā stacijā, kur pirms tam uzpildījās.
    </string>
    <string name="savings_bell_description">Turklāt, uzzinot kad tieši nokrītas cenas, autobraucējs var uzpildīt auto
        īstajā brīdī, tādējādi ilgtermiņā ietaupot vēl vairāk.
    </string>
    <string name="savings_star_description">Pat ja Jūs braucat uzpildīties kādā citā stacijā, kur cena ir augstāka,
        vismaz spēsiet novērtēt cenu - vai tā ir pieņemama, vai neadekvāti augsta.
    </string>
    <string name="savings_example">Kā piemēru par ietaupījumu, varu minēt savu novērojumu. \n\nUzpildos Neste, kas man bija
        pa ceļam uz darbu. Tur cena, salīdzinājumā ar lētāko cenu, pārsvarā vienmēr ir par kādiem ~5 centiem dārgāka. Ja
        es tā vietā uzpildītos lētākajā stacijā, Rīgā, un man būtu bākā vismaz 40 litri brīvi, tad ietaupījums sanāk ~ 2
        eur! \n\nMēnesī, braukājot gan uz darbu (15 km dienā), gan citreiz ārpus pilsētas, sanāk dažreiz pat 2 bākas
        nobraukt. Tātad mēnesī šādā veidā varētu pat ~ 4 eur ietaupīt. \n\nGadā tas jau sanāk pie 48 eur - Tā jau ir viena
        bezmaksas pilna bāka! \n\n(Ņemiet vērā, ka tas ir labākais gadījums. Varbūt ka Jūs jau dzīvojat vietā, kur pa ceļam
        ir tā lētākā stacija.. Tad nekāds ietaupījums nesanāks, jo Jūs jau tāpat lēti uzpildījāties. Bet klāt nāks
        apziņa, ka bijāt viens no tiem, kas uzpildījās lētāk!) \n\nJa Jums tas liekas smieklīgi, skaitīt centus, un gada
        griezumā ietaupīt līdz pat 48 eur, tad vismaz Jūs varat justies labāk, apzinoties ka nav jēga medīt lētāko
        degvielu, ja tāpat nekāds “jēdzīgs ietaupījums” tas nav!
    </string>

    <string name="precision_source">Zemāko cenu datus patreiz iegūstam no degvielas kompāniju mājaslapām, tādēļ patreiz šiem datiem ir tikai informatīva nozīme. Turklāt mājaslapā tā informācija netiek atjaunota brīvdienās un svētku dienās.</string>
    <string name="precision_motivation">Tomēr, uzskatām, ka jebkurš autobraucējs būs tikai ieguvējs, ja zinās kad kādai degvielas kompānijai krītas degvielas cenas un kur atrast degvielas uzpildes staciju ar lētāko cenu.</string>
    <string name="precision_available_sources">Patreiz iegūstam šādus datus:</string>

    <string name="notification_text">Saņemt paziņojumus kad samazinās degvielas cena par %1$s centiem</string>

</resources>
