<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="17dp"
        android:paddingEnd="17dp"
        tools:context=".scenes.savings.SavingsFragment"
        tools:showIn="@layout/fragment_precision">

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="@string/precision_source"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp" />

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="@string/precision_motivation"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp" />

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="@string/precision_available_sources"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp" />

</LinearLayout>