<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:bind="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <include
                layout="@layout/layout_toolbar"
                bind:title="@{@string/title_savings}"
                bind:icon='@{@drawable/ic_back_arrow}'/>

        <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="none">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingStart="17dp"
                    android:paddingEnd="17dp"
                    tools:context=".scenes.SavingsFragment">

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:drawableStart="@drawable/ic_bag"
                        android:drawablePadding="17dp"
                        android:text="@string/savings_bag_description"
                        android:textColor="@color/colorPrimary"
                        android:textSize="16sp" />

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:drawableStart="@drawable/ic_map"
                        android:drawablePadding="17dp"
                        android:text="@string/savings_map_description"
                        android:textColor="@color/colorPrimary"
                        android:textSize="16sp" />

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:drawableStart="@drawable/ic_bell"
                        android:drawablePadding="17dp"
                        android:text="@string/savings_bell_description"
                        android:textColor="@color/colorPrimary"
                        android:textSize="16sp" />

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:drawableStart="@drawable/ic_star"
                        android:drawablePadding="17dp"
                        android:text="@string/savings_star_description"
                        android:textColor="@color/colorPrimary"
                        android:textSize="16sp" />

                <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginBottom="15dp"
                        android:background="@color/colorPrimary" />

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/savings_example"

                        android:textColor="@color/colorPrimary"
                        android:textSize="16sp" />

            </LinearLayout>
        </ScrollView>

    </LinearLayout>
</layout>

